# vena-ia-platform

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  PROJECT.md  PROJECT_ROADMAP_FULL.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  lista.txt  pyproject.toml
.ai/: ACP.md  ROLES.md  (+2 more)
apps/api/: Dockerfile  README.md  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/core/: __init__.py  config.py  database.py  models_registry.py
apps/api/app/modules/ai/: __init__.py  dependencies.py
apps/api/app/modules/ai/api/: __init__.py  routes.py
apps/api/app/modules/chats/: models.py  schemas.py
apps/api/app/modules/chats/api/: __init__.py  routes.py
apps/api/app/modules/documents/: __init__.py  dependencies.py  models.py  pipeline.py  repository.py  schemas.py  service.py  storage.py
apps/api/app/modules/documents/api/: routes.py
apps/api/app/modules/files/: __init__.py  models.py  schemas.py
apps/api/app/modules/files/api/: __init__.py  routes.py
apps/api/app/modules/projects/: models.py  schemas.py
apps/api/app/modules/users/: models.py  schemas.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 2aea3ea35160_initial_core_schema.py  4c3d8f1a2b7e_add_documents_table.py
apps/api/tests/: conftest.py  test_ai.py  test_chats.py  test_document_catalog.py  test_document_pipeline.py  test_document_service.py  test_document_storage.py  test_documents.py  test_files.py  test_projects.py  test_routes.py  test_users.py
(+40 files in other folders)
