[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "vena-ia-ai"
version = "0.3.0"
description = "Provider-agnostic AI abstraction layer for Vena_IA Platform"
requires-python = ">=3.13"
dependencies = [
  "pydantic>=2.11.0",
]

[tool.setuptools.packages.find]
include = ["packages", "packages.ai*"]

[tool.ruff]
line-length = 100
target-version = "py313"
