[project]
name = "vena-ia-api"
version = "0.4.0"
description = "Backend API for Vena_IA Platform"
requires-python = ">=3.13"
dependencies = [
  "vena-ia-ai==0.3.0",
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "sqlalchemy>=2.0.0",
  "alembic>=1.16.0",
  "psycopg[binary]>=3.2.0",
  "python-multipart>=0.0.20",
  "email-validator>=2.2.0",
  "minio>=7.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
  "httpx>=0.28.0",
  "mypy>=1.17.0",
  "ruff>=0.12.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"
